--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "azj",
   "license": "ISC",
   "dependencies": {
+    "console.table": "^0.9.1",
     "inquirer": "^5.0.0",
     "mysql": "^2.15.0",
     "prompt": "^1.0.0"
